--- a/src/components/Introducing/Introducing.sass
+++ b/src/components/Introducing/Introducing.sass
@@ -1,11 +1,11 @@
 .introducing
     z-index: 2
-    background-color: #ffffffc9
+    background-color: #e1e6d391
     display: flex
     align-self: center
     flex-wrap: wrap
     flex-direction: column
-    border: 1px solid #4e5861
+    border: 1px solid #7e0f0f
     text-align: center
     padding: 2rem 3rem
     font-family: "Playwrite HR", cursive
@@ -14,8 +14,16 @@
     font-style: normal
     h1
         font-size: 2rem
+        margin: 10px 0
     h2
         font-size: 1.5rem
         font-family: "Merriweather", serif
         font-weight: 300
         font-style: normal
+    @media screen and (max-width: 768px)
+        margin: 0 10px
+        h1
+            margin: 5px 0
+            font-size: 3rem
+        h2
+            font-size: 1rem
