--- a/src/style/reset.sass
+++ b/src/style/reset.sass
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Playwrite+HR:wght@100..400&display=swap')
 //Playwrite Font
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+HR:wght@100..400&display=swap')
+//Josefin Sans
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap')
     
 body
     padding: 0
