--- a/src/components/Introducing/Introducing.sass
+++ b/src/components/Introducing/Introducing.sass
@@ -5,7 +5,7 @@
     align-self: center
     flex-wrap: wrap
     flex-direction: column
-    border: 1px solid #7e0f0f
+    border: 1px solid #000
     text-align: center
     padding: 2rem 3rem
     font-family: "Playwrite HR", cursive
