Inicio e Sobre Mim - Em andamento

--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -18,8 +18,10 @@
                 font-family: "Josefin Sans", sans-serif
                 font-optical-sizing: auto
                 font-style: normal
-                padding: 0 10px
+                padding: 0 20px
                 a, p
                     color: #000
                     &:visited
                         color: #000
+                &:hover
+                    animation: heartBeat 1s
