--- a/src/components/Home/Sections/FirstSectionHome.sass
+++ b/src/components/Home/Sections/FirstSectionHome.sass
@@ -1,10 +1,4 @@
-.first-section
-    background-color: #e1e6d3
-    min-height: 100vh
-    display: flex
-    position: relative
-    justify-content: center
-    align-content: center
+.first-section.home
     .background
         position: absolute
         left: 0
