--- a/src/components/Introducing/Introducing.sass
+++ b/src/components/Introducing/Introducing.sass
@@ -1,13 +1,4 @@
-.introducing
-    z-index: 2
-    background-color: #e1e6d391
-    display: flex
-    align-self: center
-    flex-wrap: wrap
-    flex-direction: column
-    border: 1px solid #000
-    text-align: center
-    padding: 2rem 3rem
+.Introducing
     font-family: "Playwrite HR", cursive
     font-optical-sizing: auto
     font-weight: 400
@@ -20,6 +11,10 @@
         font-family: "Merriweather", serif
         font-weight: 300
         font-style: normal
+        margin-bottom: 0
+    .left
+        img
+            max-width: 200px
     @media screen and (max-width: 768px)
         margin: 0 10px
         h1
