--- a/src/style/reset.sass
+++ b/src/style/reset.sass
@@ -4,6 +4,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+HR:wght@100..400&display=swap')
 //Josefin Sans
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap')
+//Share Tech Mono
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap')
     
 body
     padding: 0
