--- a/src/components/Home/Sections/AboutMyself.sass
+++ b/src/components/Home/Sections/AboutMyself.sass
@@ -1,5 +1,4 @@
-.first-section.about
-    padding: 60px 0 0
+.container-section.about
     .background
         position: absolute
         left: 0
@@ -14,8 +13,8 @@
     .myself
         max-width: 1170px
         text-align: left
-
-        border: 1px solid #eaf9d2
+        border: 1px solid #5464ee
+        padding: 1rem 10px
     p
         list-style-type: none
         font-family: "Josefin Sans", sans-serif
