--- a/src/components/Home/Sections/Section.sass
+++ b/src/components/Home/Sections/Section.sass
@@ -1,4 +1,4 @@
-.first-section
+.container-section
     min-height: 100vh
     display: flex
     position: relative
@@ -6,6 +6,7 @@
     align-content: center
 
     .totalCentered
+        max-width: 1170px
         z-index: 2
         background-color: #fff
         display: flex
@@ -15,3 +16,9 @@
         text-align: center
         padding: 2rem 3rem
         opacity: 1
+        overflow: hidden
+
+    .slick-container
+        display: block
+        width: 100%
+        background-color: orange
