--- a/src/components/Header/Header.sass
+++ b/src/components/Header/Header.sass
@@ -15,12 +15,14 @@
             justify-content: center
             li
                 list-style-type: none
-                font-family: "Josefin Sans", sans-serif
+                font-family: "Merriweather", serif
                 font-optical-sizing: auto
                 font-style: normal
                 padding: 0 20px
+                font-size: 0.875rem
                 a, p
                     color: #000
+                    text-decoration: none
                     &:visited
                         color: #000
                 &:hover
