--- a/src/components/Home/Sections/AboutMyself.sass
+++ b/src/components/Home/Sections/AboutMyself.sass
@@ -5,16 +5,24 @@
         top: 0
         width: 100%
         height: 100%
-        background-image: url('./../../../assets/pattern-square.jpg')
-        background-repeat: repeat
-        background-size: auto
+        // background-image: url('images/pattern-square.jpg')
+        // background-repeat: repeat
+        // background-size: auto
         z-index: 0
-        opacity: 0.3
+        // opacity: 0.3
+        display: flex
+        > div
+            &:first-child
+                width: 30%
+                background-color: #5464ee
+            &:last-child
+                width: 70%
+                background-color: #000
     .myself
         max-width: 1170px
         text-align: left
         border: 1px solid #5464ee
-        padding: 1rem 10px
+        padding: 4rem 10px
     p
         list-style-type: none
         font-family: "Josefin Sans", sans-serif
