--- a/src/components/Home/Sections/FirstSectionHome.sass
+++ b/src/components/Home/Sections/FirstSectionHome.sass
@@ -5,8 +5,9 @@
         top: 0
         width: 100%
         height: 100%
-        background-image: url('./../../../assets/gifs/bg-first-section.gif')
-        background-repeat: no-repeat
-        background-size: cover
+        // background-image: url('images/gifs/bg-first-section.gif')
+        // background-repeat: no-repeat
+        // background-size: cover
+        background-color: #4f727c
         z-index: 0
-        opacity: 0.3
+        opacity: 1
