--- a/src/components/Home/Sections/Abilities.sass
+++ b/src/components/Home/Sections/Abilities.sass
@@ -47,13 +47,13 @@
             border: none
             width: 100%
             height: 400px
-            background-image: url('./images/bg-butt.jpg')
+            background-image: url('./bg-butt.jpg')
             background-position: center 78%
             background-size: 100%
             background-repeat: no-repeat
 
             &.middle
-                background-image: url('./images/gradient-bg.jpg')
+                background-image: url('./gradient-bg.jpg')
                 height: 200px
 
         &.description
