--- a/src/style/reset.sass
+++ b/src/style/reset.sass
@@ -6,10 +6,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap')
 //Share Tech Mono
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap')
-    
+
 body
     padding: 0
     line-height: 1
     font-size: 16px
     margin: 0
     cursor: none
+    width: 100vw
+    overflow-x: hidden
