--- a/src/components/Home/Sections/Abilities.sass
+++ b/src/components/Home/Sections/Abilities.sass
@@ -1,3 +1,5 @@
+@import './../../../style/variables'
+    
 @keyframes load
     from 
         width: 0%
@@ -34,59 +36,76 @@
         border: none
         padding: 10px
         margin-bottom: 20px
+        width: 100%
         &.first
-            border-bottom: 1px solid #000
+            border-bottom: 1px solid #f5f0f0
         h1
             margin: 0 0 30px
             font-family: "Merriweather", serif
             font-weight: 300
             font-style: normal
+            font-size: 1.5rem
 
         &.banner
             max-width: 100%
             border: none
             width: 100%
             height: 400px
-            background-image: url('./bg-butt.jpg')
+            background-image: url('./images/bg-butt.jpg')
             background-position: center 78%
             background-size: 100%
             background-repeat: no-repeat
 
             &.middle
-                background-image: url('./gradient-bg.jpg')
-                height: 200px
+                background-image: url('./images/streets-light.jpg')
+                height: 500px
+                background-position: 0
 
         &.description
-            background-color: #ffffe7
-            color: #000
+            background-color: #81b8e6
+            color: #fff
             text-align: justify
-            margin: 60px 0
+            margin: 60px 0 0
+            padding: 4rem
+            box-sizing: border-box
+            max-width: initial
             p
-                font-size: 2rem
+                font-size: 1.5rem
                 margin: 0
                 font-family: 'Josefin Sans'
                 font-weight: 300
 
         &.indicators
             width: 100%
-            margin-top: 100px
+            margin-top: 20px
             > section
                 text-align: left
                 padding: 0 20px
+                > p, > span
+                    font-family: $font-Merriweathe
+                > p
+                    margin: 0 0 20px
+                > span
+                    text-align: center
+                    display: block
+                    margin-bottom: 30px
                 ul
                     list-style: none
+                    margin-bottom: 30px
+                    padding: 0
                     li
                         display: flex
                         margin-bottom: 20px
                         span
                             &.name
                                 width: 20%
+                                padding-right: 10px
                             &.level
                                 width: 80%
                                 display: flex
                                 span
-                                    height: 15px
-                                    background-color: #10da42
+                                    height: 25px
+                                    background-color: #70e68e
                                     animation: load 2s 0s
                                     -webkit-animation: load 2s 0s
                                     -moz-animation: load 2s 0s
@@ -95,7 +114,7 @@
                                     text-align: right
                                     color: #fff
                                     font-weight: 700
-                                    line-height: 15px
+                                    line-height: 25px
                                     padding: 0 10px
                                 &.l100
                                     span
@@ -120,7 +139,7 @@
                                 &.l40
                                     span
                                         width: 40%
-                                        background-color: #e7f339
+                                        background-color: #cf2222
                                 &.l30
                                     span
                                         width: 30%
@@ -138,9 +157,33 @@
                                         width: 0
                                         background-color: #cf2222
             
-
+    @media screen and (max-width: 920px)
+        .totalCentered
+            &:not(.description)
+                padding: 0 10px
+            &.description
+                margin: 20px 0 0 !important
+                padding: 20px
+                p
+                    font-size: 1.2rem
+        .banner.middle
+            background-size: cover
+            background-position: center
+        .indicators
+            margin: 0 !important
+            > section
+                > ul > li
+                    flex-wrap: wrap
+                    span
+                        &.level, &.name
+                            width: 100% !important
+                        &.name
+                            margin-bottom: 3px
+        h1
+            font-size: 1.2rem !important
     // SLider
     .glide
+        align-items: center
         .inner
             display: block
             width: 100%
