--- a/src/components/Home/Sections/AboutMyself.sass
+++ b/src/components/Home/Sections/AboutMyself.sass
@@ -5,24 +5,31 @@
         top: 0
         width: 100%
         height: 100%
-        // background-image: url('images/pattern-square.jpg')
-        // background-repeat: repeat
-        // background-size: auto
         z-index: 0
         // opacity: 0.3
         display: flex
         > div
             &:first-child
                 width: 30%
-                background-color: #5464ee
+                background-color: #fff
+                background-image: url('images/black-circle.jpg')
+                background-size: cover
+                background-position: center
+                background-repeat: no-repeat
             &:last-child
                 width: 70%
-                background-color: #000
+                background-color: #fff
+            @media screen and (max-width: 920px)
+                &:first-child
+                    width: 100%
+                &:last-child
+                    display: none
+
     .myself
         max-width: 1170px
         text-align: left
-        border: 1px solid #5464ee
-        padding: 4rem 10px
+        border: 1px solid #323c45
+        padding: 2rem 10px
     p
         list-style-type: none
         font-family: "Josefin Sans", sans-serif
@@ -47,7 +54,7 @@
         span.resume
             text-align: center
             display: block
-            background: #5464ee
+            background: #323c45
             span
                 font-size: 1.125rem
                 padding: 10px
