--- a/src/components/Home/Sections/FirstSectionHome.sass
+++ b/src/components/Home/Sections/FirstSectionHome.sass
@@ -1,3 +1,25 @@
+@import './../../../style/variables'
+    
+@keyframes aniArrow01
+    0%
+        transform: rotatez(-45deg) translateY(30px) translateX(30px)
+    100%
+        transform: rotatez(-45deg) translateY(-35px) translateX(-35px)
+
+@keyframes aniArrow02
+    0%
+        transform: translateX(45px)
+    100%
+        transform: translateX(-44px)
+
+@keyframes borderAn
+    0%
+        border: solid 2px white
+    100%    
+        border: solid 2px white 
+        border-radius: 50%
+
+
 .container-section.home
     .background
         position: absolute
@@ -5,9 +27,9 @@
         top: 0
         width: 100%
         height: 100%
-        // background-image: url('images/gifs/bg-first-section.gif')
-        // background-repeat: no-repeat
-        // background-size: cover
-        background-color: #4f727c
+        background-image: url('images/colors-black-orange.jpg')
+        background-repeat: no-repeat
+        background-size: cover
+        // background-color: #4f727c
         z-index: 0
         opacity: 1
