--- a/src/components/Home/Sections/Section.sass
+++ b/src/components/Home/Sections/Section.sass
@@ -17,6 +17,9 @@
         padding: 2rem 3rem
         opacity: 1
         overflow: hidden
+        @media screen and (max-width: 470px)
+            padding: 2rem 5px
+            width: 100%
 
     .slick-container
         display: block
